--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,14 +2,15 @@
     // Use IntelliSense para saber los atributos posibles.
     // Mantenga el puntero para ver las descripciones de los existentes atributos.
     // Para más información, visite: https://go.microsoft.com/fwlink/?linkid=830387
+   
     "version": "0.2.0",
     "configurations": [
         {
-            "name": ".NET Core Launch (console)",
+            "name": ".NET Core Launch (Console)",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/src/Program/bin/Debug/net5.0/Program.dll",
+            "program": "${workspaceFolder}/src/Program/bin/Debug/net6.0/Program.dll",
             "args": [],
             "cwd": "${workspaceFolder}/src/Program",
             "console": "internalConsole",
